# Mech2_Project

./: DrawingEllipses.py  PWM_Gen_DShot_SPI.c  Plan of Action.md  README.md  TopViewTest.py  capture_test_images.py  ellipseDetection.py  ellipseDetectionV2.py  ellipseDetectionV3.py  ellipseDetectionV4.py  ellipseDetectionV5.py  ellipseDetectionV6.py  ellipse_tuning.json  testingCV.py  testingVision.py  topView.py
.claude/: settings.local.json
Integration/pico/: CMakeLists.txt  dshot.pio  flash_pico.sh  main.c  pico_sdk_import.cmake
Integration/pico/build_pi/: .ninja_deps  .ninja_log  CMakeCache.txt  bs2_default.elf.map  build.ninja  cmake_install.cmake  dshot.pio.h  turret.dis  turret.elf  turret.elf.map  turret.hex  turret.uf2
Integration/pico/build_pi/pico-sdk/: cmake_install.cmake
Integration/pico/build_pi/pico-sdk/docs/: cmake_install.cmake
Integration/pico/build_pi/pico-sdk/src/: cmake_install.cmake
Integration/pico/build_pi/pico-sdk/src/common/boot_picobin_headers/: cmake_install.cmake
Integration/pico/build_pi/pico-sdk/src/common/boot_picoboot_headers/: cmake_install.cmake
Integration/pico/build_pi/pico-sdk/src/common/boot_uf2_headers/: cmake_install.cmake
Integration/pico/build_pi/pico-sdk/tools/: cmake_install.cmake
Integration/pico/build_pi/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
Integration/pico/build_pi/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
Integration/pico/build_pi/pioasm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt  pioasm
(+122 files in other folders)
